# rust_mfa_example

./: Cargo.toml  README.md  network_requests.har
src/: main.rs  totp.rs
src/routes/: users.rs
src/routes/users/: create_user.rs  login.rs  verify_2fa.rs
