[package]
name = "mfa_example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
argon2 = "0.5.3"
base64 = "0.22.1"
env_logger = "0.11.7"
qrcode = "0.14.1"
rand = "0.9.0"
rs-snowflake = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
totp-rs = { version = "5.6.0", features = ["gen_secret", "otpauth"] }
